[gd_scene load_steps=12 format=2]

[ext_resource path="res://Fightscene.tscn" type="PackedScene" id=1]
[ext_resource path="res://Escenas/Modsmal/Scripts/Fightscene_Modsmal.gd" type="Script" id=2]
[ext_resource path="res://Escenas/Modsmal/Scripts/CommanderModsmal.gd" type="Script" id=3]
[ext_resource path="res://Escenas/Modsmal/Scenes/Proyectil2_Modsmal.tscn" type="PackedScene" id=4]
[ext_resource path="res://Escenas/Modsmal/Scenes/Proyectil1_Moldsmal.tscn" type="PackedScene" id=5]
[ext_resource path="res://Escenas/Modsmal/Scenes/Modsmal.tscn" type="PackedScene" id=6]
[ext_resource path="res://Escenas/Modsmal/Scripts/Act_Panel_Modsmal.gd" type="Script" id=7]
[ext_resource path="res://Escenas/Modsmal/Scripts/Menu_Moldsmal.gd" type="Script" id=8]
[ext_resource path="res://Escenas/Modsmal/Scripts/SpeechGlobe_Moldsmal.gd" type="Script" id=9]
[ext_resource path="res://Audio/Enemy(froggit)_theme.ogg" type="AudioStream" id=10]
[ext_resource path="res://Scripts/Modsmal.gd" type="Script" id=11]

[node name="Fightscene" instance=ExtResource( 1 )]
script = ExtResource( 2 )

[node name="Commander" parent="." index="4"]
script = ExtResource( 3 )
Projectile1 = ExtResource( 5 )
Projectile2 = ExtResource( 4 )

[node name="Spawner0" parent="Commander" index="0"]
position = Vector2( 444, 260 )

[node name="Spawner1" parent="Commander" index="1"]
position = Vector2( 552, 260 )

[node name="Spawner2" parent="Commander" index="2"]
position = Vector2( 588, 258 )

[node name="Spawner3" parent="Commander" index="3"]
position = Vector2( 516, 260 )

[node name="Spawner4" parent="Commander" index="4"]
position = Vector2( 480, 260 )

[node name="Menu" parent="GUI/VBoxContainer/MarginContainer2" index="0"]
script = ExtResource( 8 )

[node name="ActPanel" parent="GUI/VBoxContainer/MarginContainer2/Menu" index="1"]
script = ExtResource( 7 )

[node name="Mixtape" parent="." index="8"]
stream = ExtResource( 10 )

[node name="Enemy" parent="." index="9" instance=ExtResource( 6 )]
position = Vector2( 380, 180 )
scale = Vector2( 1.25, 1.25 )
script = ExtResource( 11 )

[node name="TextureRect" parent="." index="11"]
margin_left = 462.0
margin_top = 102.0
margin_right = 587.0
margin_bottom = 220.0
script = ExtResource( 9 )
[connection signal="timeout" from="TurnTimer" to="Commander" method="_on_TurnTimer_timeout"]
[connection signal="back_world" from="GUI" to="Enemy" method="_on_GUI_back_world"]

[editable path="GUI"]
